crates/core/src/engine/snapshots/teitunnel_core__engine__planner_tests__add_over_a_foreign_cname_needs_confirmation.snap
---
source: crates/core/src/engine/planner_tests.rs
expression: snap(&p)
---
steps:
  - type: putConfig
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    ingress:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - hostname: yx.com
        service: "http://localhost:5000"
      - service: "http_status:404"
    expectedVersion: 3
    previous:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - service: "http_status:404"
  - type: updateRecord
    zoneId: z-yx
    recordId: f1
    hostname: yx.com
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    routeId: a5
    previous:
      id: f1
      name: yx.com
      type: CNAME
      content: shop.example.net
      proxied: false
      comment: ~
      ttl: 1
  - type: verify
    hostname: yx.com
warnings:
  - type: replacesForeignRecord
    hostname: yx.com
    kind: CNAME
    content: shop.example.net
requiresConfirmation: true
fingerprint: "<fingerprint>"
tunnelName: "Krishna's MacBook Pro"
