crates/core/src/engine/snapshots/teitunnel_core__engine__planner_tests__add_remote_origin_warns.snap
---
source: crates/core/src/engine/planner_tests.rs
expression: snap(&p)
---
steps:
  - type: putConfig
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    ingress:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - hostname: nas.xyz.com
        service: "http://192.168.1.10:5000"
      - service: "http_status:404"
    expectedVersion: 3
    previous:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - service: "http_status:404"
  - type: createRecord
    zoneId: z-xyz
    hostname: nas.xyz.com
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    routeId: a2
  - type: verify
    hostname: nas.xyz.com
warnings:
  - type: remoteOrigin
    origin: "http://192.168.1.10:5000"
requiresConfirmation: false
fingerprint: "<fingerprint>"
tunnelName: "Krishna's MacBook Pro"
