crates/core/src/engine/snapshots/teitunnel_core__engine__planner_tests__add_repoints_an_unproxied_tunnel_record.snap
---
source: crates/core/src/engine/planner_tests.rs
expression: snap(&p)
---
steps:
  - type: putConfig
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    ingress:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - hostname: np.xyz.com
        service: "http://localhost:7000"
      - service: "http_status:404"
    expectedVersion: 3
    previous:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - service: "http_status:404"
  - type: updateRecord
    zoneId: z-xyz
    recordId: r-np
    hostname: np.xyz.com
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    routeId: a6
    previous:
      id: r-np
      name: np.xyz.com
      type: CNAME
      content: 6ff42ae2-765d-4adf-8112-31c55c1551ef.cfargotunnel.com
      proxied: false
      comment: ~
      ttl: 1
  - type: verify
    hostname: np.xyz.com
warnings:
  - type: replacesForeignRecord
    hostname: np.xyz.com
    kind: CNAME
    content: 6ff42ae2-765d-4adf-8112-31c55c1551ef.cfargotunnel.com
requiresConfirmation: true
fingerprint: "<fingerprint>"
tunnelName: "Krishna's MacBook Pro"
