crates/core/src/engine/snapshots/teitunnel_core__engine__planner_tests__add_tcp_origin.snap
---
source: crates/core/src/engine/planner_tests.rs
expression: snap(&p)
---
steps:
  - type: putConfig
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    ingress:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - hostname: db.xyz.com
        service: "tcp://localhost:5432"
      - service: "http_status:404"
    expectedVersion: 3
    previous:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - service: "http_status:404"
  - type: createRecord
    zoneId: z-xyz
    hostname: db.xyz.com
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    routeId: a3
  - type: verify
    hostname: db.xyz.com
warnings: []
requiresConfirmation: false
fingerprint: "<fingerprint>"
tunnelName: "Krishna's MacBook Pro"
