crates/core/src/engine/snapshots/teitunnel_core__engine__planner_tests__add_with_origin_options.snap
---
source: crates/core/src/engine/planner_tests.rs
expression: snap(&p)
---
steps:
  - type: putConfig
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    ingress:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - hostname: opts.xyz.com
        service: "https://localhost:8443"
        originRequest:
          noTLSVerify: true
      - service: "http_status:404"
    expectedVersion: 3
    previous:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - service: "http_status:404"
  - type: createRecord
    zoneId: z-xyz
    hostname: opts.xyz.com
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    routeId: o1
  - type: verify
    hostname: opts.xyz.com
warnings: []
requiresConfirmation: false
fingerprint: "<fingerprint>"
tunnelName: "Krishna's MacBook Pro"
